# rust-ml-classifier

./: Cargo.toml  Makefile  README.md  data.csv
src/: main.rs
