[package]
name = "rust-ml-classifier"
version = "0.1.0"
authors = ["Luz"]
description = "A machine learning example for classification, written in Rust."
homepage = "https://github.com/Luz/rust-ml-classifier"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Luz/rust-ml-classifier"
include = ["/src/**/*.rs", "/Cargo.toml", "/LICENSE", "README.md"]
edition = "2021"

[[bin]]
name = "rust-ml-classifier"
path = "src/main.rs"

[dependencies]

clap = { version = "4", features = ["derive"] }
csv = "1.3"
ndarray = "0.15.6"
linfa = "0.7"
linfa-trees = "0.7"

